--- a/manifest.json
+++ b/manifest.json
@@ -11,7 +11,8 @@
       "persistent": false
     },
     "web_accessible_resources": [
-        "loading.png"
+        "loading.png", "content.js"
     ],
-    "permissions": ["tabs", "<all_urls>", "activeTab"]
+    "permissions": ["storage", "tabs", "<all_urls>", "activeTab", "contextMenus"],
+    "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
   }
