--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,12 @@
     "web_accessible_resources": [
         "loading.png", "content.js"
     ],
+    "content_scripts": [
+   {
+     "matches": ["http://*/*","https://*/*"],
+     "js": ["script/jspdf.min.js"]
+   }
+ ],
     "permissions": ["storage", "tabs", "<all_urls>", "activeTab", "contextMenus"],
     "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
   }
